--- a/core/resources/src/main/res/values/strings.xml
+++ b/core/resources/src/main/res/values/strings.xml
@@ -1080,4 +1080,6 @@
     <string name="inner_radius_ratio">Inner Radius Ratio</string>
     <string name="draw_regular_star">Draw Regular Star</string>
     <string name="draw_regular_star_sub">Draw star which will be regular instead of free form</string>
+    <string name="antialias">Antialias</string>
+    <string name="antialias_sub">Enables antialiasing to prevent sharp edges</string>
 </resources>
