--- a/core/resources/src/main/res/values/strings.xml
+++ b/core/resources/src/main/res/values/strings.xml
@@ -1082,4 +1082,6 @@
     <string name="draw_regular_star_sub">Draw star which will be regular instead of free form</string>
     <string name="antialias">Antialias</string>
     <string name="antialias_sub">Enables antialiasing to prevent sharp edges</string>
+    <string name="flood_fill_sub">Fills the area with given color</string>
+    <string name="flood_fill">Flood Fill</string>
 </resources>
