--- a/core/resources/src/main/res/values/strings.xml
+++ b/core/resources/src/main/res/values/strings.xml
@@ -1084,4 +1084,11 @@
     <string name="antialias_sub">Enables antialiasing to prevent sharp edges</string>
     <string name="open_edit_instead_of_preview">Open Edit Instead Of Preview</string>
     <string name="open_edit_instead_of_preview_sub">When you select image to open (preview) in ImageToolbox, edit selection sheet will be opened instead of previewing</string>
+    <string name="document_scanner">Document Scanner</string>
+    <string name="document_scanner_sub">Scan documents and create PDF from them</string>
+    <string name="click_to_start_scanning">Click to start scanning</string>
+    <string name="start_scanning">Start Scanning</string>
+    <string name="save_as_pdf">Save As Pdf</string>
+    <string name="share_as_pdf">Share As Pdf</string>
+    <string name="options_below_is_for_images">Options below is for saving images, not PDF</string>
 </resources>
