--- a/core/resources/src/main/res/values-ru/strings.xml
+++ b/core/resources/src/main/res/values-ru/strings.xml
@@ -951,4 +951,128 @@
     <string name="tag_camera_owner_name">Имя владельца камеры</string>
     <string name="tag_sharpness">Резкость</string>
     <string name="tag_exif_version">Версия Exif</string>
+    <string name="tag_y_cb_cr_coefficients">Коэффициенты Y Cb Cr</string>
+    <string name="tag_reference_black_white">Ссылка Черный Белый</string>
+    <string name="tag_flashpix_version">Версия Flashpix</string>
+    <string name="tag_color_space">Цветовое пространство</string>
+    <string name="tag_pixel_x_dimension">Размер X в пикселях</string>
+    <string name="tag_pixel_y_dimension">Размер Y в пикселях</string>
+    <string name="tag_compressed_bits_per_pixel">Сжатые биты на пиксель</string>
+    <string name="tag_offset_time">Время смещения</string>
+    <string name="tag_offset_time_original">Смещение исходного времени</string>
+    <string name="tag_offset_time_digitized">Время смещения в цифровом формате</string>
+    <string name="tag_subsec_time">Время в секундах</string>
+    <string name="tag_subsec_time_original">Оригинал, длительность менее секунды</string>
+    <string name="tag_subsec_time_digitized">Оцифрованное время в секундах</string>
+    <string name="tag_f_number">Номер F</string>
+    <string name="tag_exposure_program">Программа воздействия</string>
+    <string name="tag_oecf">OECF</string>
+    <string name="tag_recommended_exposure_index">Рекомендуемый индекс воздействия</string>
+    <string name="tag_iso_speed_latitude_yyy">Широта скорости ISO yyy</string>
+    <string name="tag_iso_speed_latitude_zzz">Скорость ISO Latitude zzz</string>
+    <string name="tag_shutter_speed_value">Значение скорости затвора</string>
+    <string name="tag_exposure_bias_value">Значение смещения экспозиции</string>
+    <string name="tag_subject_distance">Расстояние до объекта</string>
+    <string name="tag_metering_mode">Режим измерения</string>
+    <string name="tag_subject_area">Тематическая область</string>
+    <string name="tag_focal_length">Фокусное расстояние</string>
+    <string name="tag_spatial_frequency_response">Пространственная частотная характеристика</string>
+    <string name="tag_focal_plane_x_resolution">Разрешение по X в фокальной плоскости</string>
+    <string name="tag_focal_plane_y_resolution">Разрешение по Y в фокальной плоскости</string>
+    <string name="tag_focal_plane_resolution_unit">Единица разрешения фокальной плоскости</string>
+    <string name="tag_subject_location">Местоположение объекта</string>
+    <string name="tag_exposure_index">Индекс воздействия</string>
+    <string name="tag_sensing_method">Метод обнаружения</string>
+    <string name="tag_cfa_pattern">Шаблон CFA</string>
+    <string name="tag_custom_rendered">Пользовательская визуализация</string>
+    <string name="tag_exposure_mode">Режим экспозиции</string>
+    <string name="tag_digital_zoom_ratio">Коэффициент цифрового масштабирования</string>
+    <string name="tag_focal_length_in_35mm_film">Фокусное расстояние на пленке 35 мм</string>
+    <string name="tag_scene_capture_type">Тип захвата сцены</string>
+    <string name="tag_gain_control">Управление усилением</string>
+    <string name="tag_device_setting_description">Описание настройки устройства</string>
+    <string name="tag_subject_distance_range">Диапазон расстояний до объекта</string>
+    <string name="tag_image_unique_id">Уникальный идентификатор изображения</string>
+    <string name="tag_body_serial_number">Серийный номер корпуса</string>
+    <string name="tag_lens_specification">Спецификация объектива</string>
+    <string name="tag_lens_make">Производитель объектива</string>
+    <string name="tag_lens_model">Модель объектива</string>
+    <string name="tag_lens_serial_number">Серийный номер объектива</string>
+    <string name="tag_gps_version_id">Идентификатор версии GPS</string>
+    <string name="tag_gps_latitude_ref">Ссылка на широту GPS</string>
+    <string name="tag_gps_latitude">Широта GPS</string>
+    <string name="tag_gps_longitude_ref">Ссылка на долготу GPS</string>
+    <string name="tag_gps_longitude">Долгота GPS</string>
+    <string name="tag_gps_altitude_ref">Ссылка на высоту по GPS</string>
+    <string name="tag_gps_altitude">Высота по GPS</string>
+    <string name="tag_gps_timestamp">Отметка времени GPS</string>
+    <string name="tag_gps_satellites">Спутники GPS</string>
+    <string name="tag_gps_status">Состояние GPS</string>
+    <string name="tag_gps_measure_mode">Режим измерения GPS</string>
+    <string name="tag_gps_dop">GPS DOP</string>
+    <string name="tag_gps_speed_ref">Ссылка на скорость GPS</string>
+    <string name="tag_gps_speed">Скорость GPS</string>
+    <string name="tag_gps_track_ref">Ссылка на GPS-трек</string>
+    <string name="tag_gps_track">GPS-трек</string>
+    <string name="tag_gps_img_direction_ref">Ссылка на направление GPS-изображения</string>
+    <string name="tag_gps_img_direction">Направление GPS-изображения</string>
+    <string name="tag_gps_map_datum">Система координат GPS-карты</string>
+    <string name="tag_gps_dest_latitude_ref">Ссылка на широту места назначения по GPS</string>
+    <string name="tag_gps_dest_latitude">Широта пункта назначения GPS</string>
+    <string name="tag_gps_dest_longitude_ref">Ссылка на долготу пункта назначения по GPS</string>
+    <string name="tag_gps_dest_longitude">Долгота назначения по GPS</string>
+    <string name="tag_gps_dest_bearing_ref">Ссылка на конечный пеленг GPS</string>
+    <string name="tag_gps_dest_bearing">Назначение GPS</string>
+    <string name="tag_gps_dest_distance_ref">Ссылка на конечное расстояние по GPS</string>
+    <string name="tag_gps_dest_distance">Расстояние назначения GPS</string>
+    <string name="tag_gps_processing_method">Метод обработки GPS</string>
+    <string name="tag_gps_area_information">Информация о районе GPS</string>
+    <string name="tag_gps_datestamp">Отметка даты GPS</string>
+    <string name="tag_gps_differential">Дифференциал GPS</string>
+    <string name="tag_gps_h_positioning_error">Ошибка позиционирования GPS H</string>
+    <string name="tag_interoperability_index">Индекс совместимости</string>
+    <string name="tag_default_crop_size">Размер обрезки по умолчанию</string>
+    <string name="tag_orf_preview_image_start">Начало предварительного просмотра изображения</string>
+    <string name="tag_orf_preview_image_length">Длина изображения для предварительного просмотра</string>
+    <string name="tag_orf_aspect_frame">Кадр аспекта</string>
+    <string name="tag_rw2_sensor_bottom_border">Нижняя граница датчика</string>
+    <string name="tag_rw2_sensor_left_border">Левая граница датчика</string>
+    <string name="tag_rw2_sensor_right_border">Правая граница датчика</string>
+    <string name="tag_rw2_sensor_top_border">Верхняя граница датчика</string>
+    <string name="repeat_text">Повторить текст</string>
+    <string name="repeat_text_sub">Текущий текст будет повторяться до конца пути вместо однократного рисования</string>
+    <string name="dash_size">Размер штриха</string>
+    <string name="draw_mode_image_sub">Использовать выбранное изображение, чтобы нарисовать его по заданному пути</string>
+    <string name="draw_image_sub">Это изображение будет использоваться в качестве повторяющейся записи нарисованного пути</string>
+    <string name="outlined_triangle_sub">Рисует очерченный треугольник от начальной точки до конечной точки</string>
+    <string name="triangle_sub">Рисует очерченный треугольник от начальной точки до конечной точки</string>
+    <string name="outlined_triangle">Очерченный треугольник</string>
+    <string name="triangle">Треугольник</string>
+    <string name="polygon_sub">Рисует многоугольник от начальной точки до конечной точки</string>
+    <string name="polygon">Многоугольник</string>
+    <string name="outlined_polygon">Контурный многоугольник</string>
+    <string name="outlined_polygon_sub">Рисует контурный многоугольник от начальной точки до конечной точки</string>
+    <string name="vertices">Вершины</string>
+    <string name="draw_regular_polygon">Нарисовать правильный многоугольник</string>
+    <string name="draw_regular_polygon_sub">Нарисуйте многоугольник правильной формы, а не произвольной формы</string>
+    <string name="star_sub">Рисует звезду от начальной точки до конечной точки</string>
+    <string name="star">Звезда</string>
+    <string name="outlined_star">Обведенная звезда</string>
+    <string name="outlined_star_sub">Рисует контурную звезду от начальной точки до конечной точки</string>
+    <string name="inner_radius_ratio">Отношение внутреннего радиуса</string>
+    <string name="draw_regular_star">Нарисовать обычную звезду</string>
+    <string name="draw_regular_star_sub">Нарисуйте звезду правильной формы, а не свободной</string>
+    <string name="antialias">Сглаживание</string>
+    <string name="antialias_sub">Включает сглаживание для предотвращения острых краев</string>
+    <string name="open_edit_instead_of_preview">Открыть редактирование вместо предварительного просмотра</string>
+    <string name="open_edit_instead_of_preview_sub">Когда вы выбираете изображение для открытия (предварительного просмотра) в ImageToolbox, вместо предварительного просмотра откроется лист редактирования выбора</string>
+    <string name="document_scanner">Сканер документов</string>
+    <string name="document_scanner_sub">Сканируйте документы и создавайте из них PDF или отдельные изображения</string>
+    <string name="click_to_start_scanning">Нажмите, чтобы начать сканирование</string>
+    <string name="start_scanning">Начать сканирование</string>
+    <string name="save_as_pdf">Сохранить как PDF</string>
+    <string name="share_as_pdf">Поделиться в формате PDF</string>
+    <string name="options_below_is_for_images">Параметры ниже предназначены для сохранения изображений, а не PDF</string>
+    <string name="equalize_histogram_hsv">Выровнять HSV гистограмму</string>
+    <string name="equalize_histogram">Выровнять гистограмму</string>
 </resources>
