--- a/core/resources/src/main/res/values-ru/strings.xml
+++ b/core/resources/src/main/res/values-ru/strings.xml
@@ -1039,7 +1039,7 @@
     <string name="tag_rw2_sensor_left_border">Левая граница датчика</string>
     <string name="tag_rw2_sensor_right_border">Правая граница датчика</string>
     <string name="tag_rw2_sensor_top_border">Верхняя граница датчика</string>
-    <string name="repeat_text">Повторить текст</string>
+    <string name="repeat_text">Повторять текст</string>
     <string name="repeat_text_sub">Текущий текст будет повторяться до конца пути вместо однократного рисования</string>
     <string name="dash_size">Размер штриха</string>
     <string name="draw_mode_image_sub">Использовать выбранное изображение, чтобы нарисовать его по заданному пути</string>
@@ -1053,18 +1053,18 @@
     <string name="outlined_polygon">Контурный многоугольник</string>
     <string name="outlined_polygon_sub">Рисует контурный многоугольник от начальной точки до конечной точки</string>
     <string name="vertices">Вершины</string>
-    <string name="draw_regular_polygon">Нарисовать правильный многоугольник</string>
+    <string name="draw_regular_polygon">Рисовать правильный многоугольник</string>
     <string name="draw_regular_polygon_sub">Нарисуйте многоугольник правильной формы, а не произвольной формы</string>
     <string name="star_sub">Рисует звезду от начальной точки до конечной точки</string>
     <string name="star">Звезда</string>
     <string name="outlined_star">Обведенная звезда</string>
     <string name="outlined_star_sub">Рисует контурную звезду от начальной точки до конечной точки</string>
     <string name="inner_radius_ratio">Отношение внутреннего радиуса</string>
-    <string name="draw_regular_star">Нарисовать обычную звезду</string>
+    <string name="draw_regular_star">Рисовать правильную звезду</string>
     <string name="draw_regular_star_sub">Нарисуйте звезду правильной формы, а не свободной</string>
     <string name="antialias">Сглаживание</string>
     <string name="antialias_sub">Включает сглаживание для предотвращения острых краев</string>
-    <string name="open_edit_instead_of_preview">Открыть редактирование вместо предварительного просмотра</string>
+    <string name="open_edit_instead_of_preview">Открывать редактирование вместо предварительного просмотра</string>
     <string name="open_edit_instead_of_preview_sub">Когда вы выбираете изображение для открытия (предварительного просмотра) в ImageToolbox, вместо предварительного просмотра откроется лист редактирования выбора</string>
     <string name="document_scanner">Сканер документов</string>
     <string name="document_scanner_sub">Сканируйте документы и создавайте из них PDF или отдельные изображения</string>
