--- a/core/resources/src/main/res/values/strings.xml
+++ b/core/resources/src/main/res/values/strings.xml
@@ -1098,4 +1098,5 @@
     <string name="allow_enter_by_text_field_sub">Enables Text Field behind presets selection, to enter them on the fly</string>
     <string name="scale_color_space">Scale Color Space</string>
     <string name="linear">Linear</string>
+    <string name="equalize_histogram_pixelation">Equalize Histogram Pixelation</string>
 </resources>
