--- a/core/resources/src/main/res/values/strings.xml
+++ b/core/resources/src/main/res/values/strings.xml
@@ -1107,4 +1107,6 @@
     <string name="clahe">Clahe</string>
     <string name="clahe_lab">Clahe LAB</string>
     <string name="clahe_luv">Clahe LUV</string>
+    <string name="crop_to_content">Crop To Content</string>
+    <string name="frame_color">Frame Color</string>
 </resources>
